# KAI

./: README.md
.github/: FUNDING.yml
.github/workflows/: update-loc.yml
KAI_Engine/: CMakeLists.txt
KAI_Engine/src/: main.h
KAI_Engine/src/API/: KaiBridge.cpp
KAI_Engine/src/Core/: AutoDetector.cpp  AutoDetector.h  Trainer.h
KAI_Engine/src/Data/: ImageDataset.cpp  ImageDataset.h
KAI_Engine/src/Models/: SimpleCNN.cpp  SimpleCNN.h  XORModel.h
KAI_UI/: App.xaml  App.xaml.cs  KAI_UI.csproj  KAI_UI.slnx  MainWindow.xaml  MainWindow.xaml.cs
KAI_UI/Core/: AppSettings.cs  GlobalEvents.cs  RelayCommand.cs
KAI_UI/Dialogs/: ConfirmationWindow.xaml  ConfirmationWindow.xaml.cs
KAI_UI/Models/: SystemMetrics.cs
KAI_UI/Services/: KaiBridge.cs  KaiEngineService.cs
KAI_UI/ViewModels/: DashboardViewModel.cs  ForensicsViewModel.cs  MainViewModel.cs  ModelsViewModel.cs  SettingsViewModel.cs  TrainingViewModel.cs  ViewModelBase.cs
KAI_UI/Views/: DashboardView.xaml  DashboardView.xaml.cs  ForensicsView.xaml  ForensicsView.xaml.cs  ModelsView.xaml  ModelsView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  TrainingView.xaml  TrainingView.xaml.cs
assets/checkpoints/: vision_brain.pt  xor_brain.pt
src/: main.cpp
src/Core/: Trainer.h
src/Models/: VisionModel.h
